refactor in prep for KG interface class

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -473,7 +473,7 @@
     "    factory = textgraphs.PipelineFactory(\n",
     "        spacy_model = textgraphs.SPACY_MODEL,\n",
     "        ner_model = None,\n",
-    "        kg = textgraphs.WikiDatum(\n",
+    "        kg = textgraphs.KGWikiMedia(\n",
     "            spotlight_api = textgraphs.DBPEDIA_SPOTLIGHT_API,\n",
     "            dbpedia_search_api = textgraphs.DBPEDIA_SEARCH_API,\n",
     "            dbpedia_sparql_api = textgraphs.DBPEDIA_SPARQL_API,\n",
