--- a/docs/ex0_0.md
+++ b/docs/ex0_0.md
@@ -1,7 +1,7 @@
 
 
 !!! note
-    To run this notebook in JupyterLab, load [`examples/tutorial.ipynb`](https://github.com/DerwenAI/textgraphs/blob/main/examples/tutorial.ipynb)
+    To run this notebook in JupyterLab, load [`examples/ex0_0.ipynb`](https://github.com/DerwenAI/textgraphs/blob/main/examples/ex0_0.ipynb)
 
 
 
@@ -1004,7 +1004,7 @@ display(wordcloud.to_image())
 
 
 
-![png](tutorial_files/tutorial_39_0.png)
+![png](ex0_0_files/ex0_0_39_0.png)
 
 
 
@@ -1025,7 +1025,7 @@ render.draw_communities();
 
 
 
-![png](tutorial_files/tutorial_42_0.png)
+![png](ex0_0_files/ex0_0_42_0.png)
 
 
 
