impl apidocs descriptions

--- a/docs/ex0_0.md
+++ b/docs/ex0_0.md
@@ -538,6 +538,12 @@ pv_graph.show("tmp.fig02.html")
 
 
 
+*What does this transform provide?*
+
+By using a _graph of relations_ dual representation of our graph data, first and foremost we obtain a more compact representation of the relations in the graph, and means of making inferences (e.g., _link prediction_) where there is substantially more invariance in the training data.
+
+Also recognize that for a parse graph of a paragraph in the English language, the most interesting nodes will probably be either subjects (`nsubj`) or direct objects (`pobj`). Here in the _graph of relations_ we see illustrated how the important details from _entity linking_ tend to cluster near either `nsubj` or `pobj` entities, connected through punctuation. This is not as readily observed in the earlier visualization of the _lemma graph_.
+
 ## statistical stack profile instrumentation
 
 
