--- a/examples/ex0_0.ipynb
+++ b/examples/ex0_0.ipynb
@@ -1424,6 +1424,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c191fde0-1093-4cdc-a3ea-86cc2bf394b8",
+   "metadata": {},
+   "source": [
+    "*What does this transform provide?*\n",
+    "\n",
+    "By using a _graph of relations_ dual representation of our graph data, first and foremost we obtain a more compact representation of the relations in the graph, and means of making inferences (e.g., _link prediction_) where there is substantially more invariance in the training data.\n",
+    "\n",
+    "Also recognize that for a parse graph of a paragraph in the English language, the most interesting nodes will probably be either subjects (`nsubj`) or direct objects (`pobj`). Here in the _graph of relations_ we see illustrated how the important details from _entity linking_ tend to cluster near either `nsubj` or `pobj` entities, connected through punctuation. This is not as readily observed in the earlier visualization of the _lemma graph_."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ff49fe28-e75f-4590-8b87-0d8962928cba",
    "metadata": {},
    "source": [
