export to KùzuDB for openCypher

--- a/examples/ex0_0.ipynb
+++ b/examples/ex0_0.ipynb
@@ -1528,7 +1528,7 @@
     }
    ],
    "source": [
-    "triples: str = tg.extract_rdf()\n",
+    "triples: str = tg.export_rdf()\n",
     "print(triples)"
    ]
   },
