--- a/examples/ex2_0.ipynb
+++ b/examples/ex2_0.ipynb
@@ -6,11 +6,11 @@
    "id": "c32bf0b9-1445-4ede-ae49-7dd63ff3b08e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:08.042317Z",
-     "iopub.status.busy": "2024-01-15T01:34:08.042068Z",
-     "iopub.status.idle": "2024-01-15T01:34:08.056321Z",
-     "shell.execute_reply": "2024-01-15T01:34:08.054791Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:08.042292Z"
+     "iopub.execute_input": "2024-01-17T01:35:52.002602Z",
+     "iopub.status.busy": "2024-01-17T01:35:52.001643Z",
+     "iopub.status.idle": "2024-01-17T01:35:52.021332Z",
+     "shell.execute_reply": "2024-01-17T01:35:52.018806Z",
+     "shell.execute_reply.started": "2024-01-17T01:35:52.002544Z"
     }
    },
    "outputs": [],
@@ -49,11 +49,11 @@
    "id": "22489527-2ad5-4e3c-be23-f511e6bcf69f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:08.061552Z",
-     "iopub.status.busy": "2024-01-15T01:34:08.060483Z",
-     "iopub.status.idle": "2024-01-15T01:34:16.082786Z",
-     "shell.execute_reply": "2024-01-15T01:34:16.081522Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:08.061507Z"
+     "iopub.execute_input": "2024-01-17T01:35:52.030355Z",
+     "iopub.status.busy": "2024-01-17T01:35:52.029702Z",
+     "iopub.status.idle": "2024-01-17T01:35:59.577245Z",
+     "shell.execute_reply": "2024-01-17T01:35:59.576046Z",
+     "shell.execute_reply.started": "2024-01-17T01:35:52.030319Z"
     },
     "scrolled": true
    },
@@ -72,11 +72,11 @@
    "id": "438f5775-487b-493e-a172-59b652b94955",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:16.085030Z",
-     "iopub.status.busy": "2024-01-15T01:34:16.084619Z",
-     "iopub.status.idle": "2024-01-15T01:34:16.105797Z",
-     "shell.execute_reply": "2024-01-15T01:34:16.105121Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:16.085001Z"
+     "iopub.execute_input": "2024-01-17T01:35:59.579567Z",
+     "iopub.status.busy": "2024-01-17T01:35:59.579060Z",
+     "iopub.status.idle": "2024-01-17T01:35:59.603599Z",
+     "shell.execute_reply": "2024-01-17T01:35:59.602072Z",
+     "shell.execute_reply.started": "2024-01-17T01:35:59.579536Z"
     }
    },
    "outputs": [],
@@ -90,11 +90,11 @@
    "id": "adc052dd-5cca-4d11-b543-3f0999f4f883",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:16.107278Z",
-     "iopub.status.busy": "2024-01-15T01:34:16.107107Z",
-     "iopub.status.idle": "2024-01-15T01:34:16.152605Z",
-     "shell.execute_reply": "2024-01-15T01:34:16.150978Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:16.107256Z"
+     "iopub.execute_input": "2024-01-17T01:35:59.605959Z",
+     "iopub.status.busy": "2024-01-17T01:35:59.605459Z",
+     "iopub.status.idle": "2024-01-17T01:35:59.655730Z",
+     "shell.execute_reply": "2024-01-17T01:35:59.654417Z",
+     "shell.execute_reply.started": "2024-01-17T01:35:59.605924Z"
     }
    },
    "outputs": [
@@ -102,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last updated: 2024-01-14T17:34:16.110051-08:00\n",
+      "Last updated: 2024-01-16T17:35:59.608787-08:00\n",
       "\n",
       "Python implementation: CPython\n",
       "Python version       : 3.10.11\n",
@@ -129,11 +129,11 @@
    "id": "6e4618da-daf9-44c9-adbb-e5781dba5504",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:16.159924Z",
-     "iopub.status.busy": "2024-01-15T01:34:16.158355Z",
-     "iopub.status.idle": "2024-01-15T01:34:16.185738Z",
-     "shell.execute_reply": "2024-01-15T01:34:16.184893Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:16.159853Z"
+     "iopub.execute_input": "2024-01-17T01:35:59.658604Z",
+     "iopub.status.busy": "2024-01-17T01:35:59.658083Z",
+     "iopub.status.idle": "2024-01-17T01:35:59.692941Z",
+     "shell.execute_reply": "2024-01-17T01:35:59.684789Z",
+     "shell.execute_reply.started": "2024-01-17T01:35:59.658572Z"
     }
    },
    "outputs": [
@@ -141,9 +141,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sys       : 3.10.11 (v3.10.11:7d4cc5aa85, Apr  4 2023, 19:05:19) [Clang 13.0.0 (clang-1300.0.29.30)]\n",
-      "textgraphs: 0.3.2.dev3+gaea63b7.d20240108\n",
       "pyvis     : 0.3.2\n",
+      "textgraphs: 0.5.0\n",
+      "sys       : 3.10.11 (v3.10.11:7d4cc5aa85, Apr  4 2023, 19:05:19) [Clang 13.0.0 (clang-1300.0.29.30)]\n",
       "\n"
      ]
     }
@@ -182,11 +182,11 @@
    "id": "e2412f6c-2c60-40d7-95f5-7bd281d522e7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:16.188375Z",
-     "iopub.status.busy": "2024-01-15T01:34:16.188059Z",
-     "iopub.status.idle": "2024-01-15T01:34:16.196374Z",
-     "shell.execute_reply": "2024-01-15T01:34:16.194910Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:16.188345Z"
+     "iopub.execute_input": "2024-01-17T01:35:59.695180Z",
+     "iopub.status.busy": "2024-01-17T01:35:59.694887Z",
+     "iopub.status.idle": "2024-01-17T01:35:59.711557Z",
+     "shell.execute_reply": "2024-01-17T01:35:59.704654Z",
+     "shell.execute_reply.started": "2024-01-17T01:35:59.695127Z"
     }
    },
    "outputs": [],
@@ -223,11 +223,11 @@
    "id": "630430c5-21dc-4897-9a4b-3b01baf3de17",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:16.207423Z",
-     "iopub.status.busy": "2024-01-15T01:34:16.206871Z",
-     "iopub.status.idle": "2024-01-15T01:34:16.214150Z",
-     "shell.execute_reply": "2024-01-15T01:34:16.212569Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:16.207379Z"
+     "iopub.execute_input": "2024-01-17T01:35:59.718153Z",
+     "iopub.status.busy": "2024-01-17T01:35:59.717788Z",
+     "iopub.status.idle": "2024-01-17T01:35:59.734747Z",
+     "shell.execute_reply": "2024-01-17T01:35:59.732341Z",
+     "shell.execute_reply.started": "2024-01-17T01:35:59.718117Z"
     }
    },
    "outputs": [],
@@ -252,11 +252,11 @@
    "id": "2a289117-301d-4027-ae1b-200201fb5f93",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:16.216826Z",
-     "iopub.status.busy": "2024-01-15T01:34:16.216244Z",
-     "iopub.status.idle": "2024-01-15T01:34:16.226775Z",
-     "shell.execute_reply": "2024-01-15T01:34:16.224918Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:16.216776Z"
+     "iopub.execute_input": "2024-01-17T01:35:59.738759Z",
+     "iopub.status.busy": "2024-01-17T01:35:59.737750Z",
+     "iopub.status.idle": "2024-01-17T01:35:59.745742Z",
+     "shell.execute_reply": "2024-01-17T01:35:59.744107Z",
+     "shell.execute_reply.started": "2024-01-17T01:35:59.738713Z"
     }
    },
    "outputs": [],
@@ -279,11 +279,11 @@
    "id": "da6fcb0f-b2ac-4f74-af39-2c129c750cab",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:16.231850Z",
-     "iopub.status.busy": "2024-01-15T01:34:16.230874Z",
-     "iopub.status.idle": "2024-01-15T01:34:19.780526Z",
-     "shell.execute_reply": "2024-01-15T01:34:19.779674Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:16.231734Z"
+     "iopub.execute_input": "2024-01-17T01:35:59.749862Z",
+     "iopub.status.busy": "2024-01-17T01:35:59.749122Z",
+     "iopub.status.idle": "2024-01-17T01:36:03.042323Z",
+     "shell.execute_reply": "2024-01-17T01:36:03.040676Z",
+     "shell.execute_reply.started": "2024-01-17T01:35:59.749790Z"
     }
    },
    "outputs": [],
@@ -316,11 +316,11 @@
    "id": "321a9a90-ae80-47d7-b392-020b06bd3066",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:19.782005Z",
-     "iopub.status.busy": "2024-01-15T01:34:19.781765Z",
-     "iopub.status.idle": "2024-01-15T01:34:19.799080Z",
-     "shell.execute_reply": "2024-01-15T01:34:19.798009Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:19.781972Z"
+     "iopub.execute_input": "2024-01-17T01:36:03.044027Z",
+     "iopub.status.busy": "2024-01-17T01:36:03.043746Z",
+     "iopub.status.idle": "2024-01-17T01:36:03.071058Z",
+     "shell.execute_reply": "2024-01-17T01:36:03.070258Z",
+     "shell.execute_reply.started": "2024-01-17T01:36:03.043990Z"
     }
    },
    "outputs": [],
@@ -345,11 +345,11 @@
    "id": "f7f6665e-19da-4a25-a405-adbb5dfb3e88",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:19.802115Z",
-     "iopub.status.busy": "2024-01-15T01:34:19.801579Z",
-     "iopub.status.idle": "2024-01-15T01:34:25.590682Z",
-     "shell.execute_reply": "2024-01-15T01:34:25.589240Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:19.802074Z"
+     "iopub.execute_input": "2024-01-17T01:36:03.072882Z",
+     "iopub.status.busy": "2024-01-17T01:36:03.072607Z",
+     "iopub.status.idle": "2024-01-17T01:36:03.751536Z",
+     "shell.execute_reply": "2024-01-17T01:36:03.750042Z",
+     "shell.execute_reply.started": "2024-01-17T01:36:03.072843Z"
     }
    },
    "outputs": [],
@@ -382,11 +382,11 @@
    "id": "05b409af-14df-4158-9709-ffe2d79e864b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:25.594377Z",
-     "iopub.status.busy": "2024-01-15T01:34:25.593898Z",
-     "iopub.status.idle": "2024-01-15T01:34:25.603491Z",
-     "shell.execute_reply": "2024-01-15T01:34:25.602080Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:25.594322Z"
+     "iopub.execute_input": "2024-01-17T01:36:03.762865Z",
+     "iopub.status.busy": "2024-01-17T01:36:03.762378Z",
+     "iopub.status.idle": "2024-01-17T01:36:03.773217Z",
+     "shell.execute_reply": "2024-01-17T01:36:03.769536Z",
+     "shell.execute_reply.started": "2024-01-17T01:36:03.762817Z"
     },
     "scrolled": true
    },
@@ -413,11 +413,11 @@
    "id": "b212f5ed-03d6-439f-92ae-f2cbedb18609",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:25.609951Z",
-     "iopub.status.busy": "2024-01-15T01:34:25.606914Z",
-     "iopub.status.idle": "2024-01-15T01:34:25.625897Z",
-     "shell.execute_reply": "2024-01-15T01:34:25.622815Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:25.609814Z"
+     "iopub.execute_input": "2024-01-17T01:36:03.776399Z",
+     "iopub.status.busy": "2024-01-17T01:36:03.775428Z",
+     "iopub.status.idle": "2024-01-17T01:36:03.784525Z",
+     "shell.execute_reply": "2024-01-17T01:36:03.783464Z",
+     "shell.execute_reply.started": "2024-01-17T01:36:03.776310Z"
     }
    },
    "outputs": [],
@@ -441,11 +441,11 @@
    "id": "2f952a7c-3130-49c9-b659-fb941e9e0bfe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:25.632256Z",
-     "iopub.status.busy": "2024-01-15T01:34:25.630774Z",
-     "iopub.status.idle": "2024-01-15T01:34:25.720882Z",
-     "shell.execute_reply": "2024-01-15T01:34:25.719869Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:25.632141Z"
+     "iopub.execute_input": "2024-01-17T01:36:03.788862Z",
+     "iopub.status.busy": "2024-01-17T01:36:03.787641Z",
+     "iopub.status.idle": "2024-01-17T01:36:03.848366Z",
+     "shell.execute_reply": "2024-01-17T01:36:03.847499Z",
+     "shell.execute_reply.started": "2024-01-17T01:36:03.788773Z"
     }
    },
    "outputs": [
@@ -453,7 +453,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tmp.fig01.html\n"
+      "tmp.fig04.html\n"
      ]
     },
     {
@@ -463,7 +463,7 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"600px\"\n",
-       "            src=\"tmp.fig01.html\"\n",
+       "            src=\"tmp.fig04.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -471,7 +471,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x15b34d6f0>"
+       "<IPython.lib.display.IFrame at 0x157c12e60>"
       ]
      },
      "execution_count": 14,
@@ -481,7 +481,7 @@
    ],
    "source": [
     "pv_graph.prep_notebook()\n",
-    "pv_graph.show(\"tmp.fig01.html\")"
+    "pv_graph.show(\"tmp.fig04.html\")"
    ]
   },
   {
@@ -506,18 +506,18 @@
    "id": "af4ecb06-370f-4077-9899-29a1673e4768",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:25.725966Z",
-     "iopub.status.busy": "2024-01-15T01:34:25.724606Z",
-     "iopub.status.idle": "2024-01-15T01:34:25.733116Z",
-     "shell.execute_reply": "2024-01-15T01:34:25.732444Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:25.725883Z"
+     "iopub.execute_input": "2024-01-17T01:36:03.849937Z",
+     "iopub.status.busy": "2024-01-17T01:36:03.849635Z",
+     "iopub.status.idle": "2024-01-17T01:36:03.856645Z",
+     "shell.execute_reply": "2024-01-17T01:36:03.855799Z",
+     "shell.execute_reply.started": "2024-01-17T01:36:03.849877Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyinstrument.session.Session at 0x15b34dfc0>"
+       "<pyinstrument.session.Session at 0x1522e2110>"
       ]
      },
      "execution_count": 15,
@@ -535,11 +535,11 @@
    "id": "d5ac2ce6-15b1-41ad-8215-8a5f76036cf1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-15T01:34:25.734703Z",
-     "iopub.status.busy": "2024-01-15T01:34:25.734515Z",
-     "iopub.status.idle": "2024-01-15T01:34:26.745994Z",
-     "shell.execute_reply": "2024-01-15T01:34:26.745420Z",
-     "shell.execute_reply.started": "2024-01-15T01:34:25.734679Z"
+     "iopub.execute_input": "2024-01-17T01:36:03.857987Z",
+     "iopub.status.busy": "2024-01-17T01:36:03.857704Z",
+     "iopub.status.idle": "2024-01-17T01:36:04.615855Z",
+     "shell.execute_reply": "2024-01-17T01:36:04.615084Z",
+     "shell.execute_reply.started": "2024-01-17T01:36:03.857962Z"
     }
    },
    "outputs": [
@@ -548,27 +548,33 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "  _     ._   __/__   _ _  _  _ _/_   Recorded: 17:34:16  Samples:  3142\n",
-      " /_//_/// /_\\ / //_// / //_'/ //     Duration: 9.510     CPU time: 3.591\n",
+      "  _     ._   __/__   _ _  _  _ _/_   Recorded: 17:35:59  Samples:  2846\n",
+      " /_//_/// /_\\ / //_// / //_'/ //     Duration: 4.111     CPU time: 3.294\n",
       "/   _/                      v4.6.1\n",
       "\n",
-      "Program: /Users/paco/src/textgraphs/venv/lib/python3.10/site-packages/ipykernel_launcher.py -f /Users/paco/Library/Jupyter/runtime/kernel-a4651af1-5b88-4c9e-ad8d-662f666edfc8.json\n",
+      "Program: /Users/paco/src/textgraphs/venv/lib/python3.10/site-packages/ipykernel_launcher.py -f /Users/paco/Library/Jupyter/runtime/kernel-4365d4ba-2d4d-4d4b-83e2-eb5ef8abfe26.json\n",
       "\n",
-      "9.509 IPythonKernel.dispatch_queue  ipykernel/kernelbase.py:525\n",
-      "└─ 9.508 IPythonKernel.process_one  ipykernel/kernelbase.py:511\n",
-      "      [10 frames hidden]  ipykernel, IPython\n",
-      "         9.426 ZMQInteractiveShell.run_ast_nodes  IPython/core/interactiveshell.py:3394\n",
-      "         ├─ 5.784 <module>  ../ipykernel_84869/3257668275.py:1\n",
-      "         │  └─ 5.778 TextGraphs.create_pipeline  textgraphs/doc.py:98\n",
-      "         │     └─ 5.778 PipelineFactory.create_pipeline  textgraphs/pipe.py:508\n",
-      "         │        └─ 5.778 Pipeline.__init__  textgraphs/pipe.py:216\n",
-      "         │           └─ 5.778 English.__call__  spacy/language.py:1016\n",
-      "         │                 [40 frames hidden]  spacy, spacy_dbpedia_spotlight, reque...\n",
-      "         │                    3.428 socket.connect  <built-in>\n",
-      "         └─ 3.540 <module>  ../ipykernel_84869/1372904243.py:1\n",
-      "            └─ 3.538 PipelineFactory.__init__  textgraphs/pipe.py:434\n",
-      "               └─ 3.519 load  spacy/__init__.py:27\n",
-      "                     [78 frames hidden]  spacy, en_core_web_sm, catalogue, imp...\n",
+      "4.111 IPythonKernel.dispatch_shell  ipykernel/kernelbase.py:378\n",
+      "└─ 4.075 IPythonKernel.execute_request  ipykernel/kernelbase.py:721\n",
+      "      [9 frames hidden]  ipykernel, IPython\n",
+      "         3.995 ZMQInteractiveShell.run_ast_nodes  IPython/core/interactiveshell.py:3394\n",
+      "         ├─ 3.250 <module>  ../ipykernel_4433/1372904243.py:1\n",
+      "         │  └─ 3.248 PipelineFactory.__init__  textgraphs/pipe.py:434\n",
+      "         │     └─ 3.232 load  spacy/__init__.py:27\n",
+      "         │           [98 frames hidden]  spacy, en_core_web_sm, catalogue, imp...\n",
+      "         │              0.496 tokenizer_factory  spacy/language.py:110\n",
+      "         │              └─ 0.108 _validate_special_case  spacy/tokenizer.pyx:573\n",
+      "         │              0.439 <lambda>  spacy/language.py:2170\n",
+      "         │              └─ 0.085 _validate_special_case  spacy/tokenizer.pyx:573\n",
+      "         ├─ 0.672 <module>  ../ipykernel_4433/3257668275.py:1\n",
+      "         │  └─ 0.669 TextGraphs.create_pipeline  textgraphs/doc.py:103\n",
+      "         │     └─ 0.669 PipelineFactory.create_pipeline  textgraphs/pipe.py:508\n",
+      "         │        └─ 0.669 Pipeline.__init__  textgraphs/pipe.py:216\n",
+      "         │           └─ 0.669 English.__call__  spacy/language.py:1016\n",
+      "         │                 [31 frames hidden]  spacy, spacy_dbpedia_spotlight, reque...\n",
+      "         └─ 0.055 <module>  ../ipykernel_4433/72966960.py:1\n",
+      "            └─ 0.046 Network.prep_notebook  pyvis/network.py:552\n",
+      "                  [5 frames hidden]  pyvis, jinja2\n",
       "\n",
       "\n"
      ]
