updates for paper

--- a/examples/ex0_0.ipynb
+++ b/examples/ex0_0.ipynb
@@ -1123,15 +1123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "05b409af-14df-4158-9709-ffe2d79e864b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-17T01:42:47.101231Z",
-     "iopub.status.busy": "2024-01-17T01:42:47.100692Z",
-     "iopub.status.idle": "2024-01-17T01:42:47.114073Z",
-     "shell.execute_reply": "2024-01-17T01:42:47.113207Z",
-     "shell.execute_reply.started": "2024-01-17T01:42:47.101186Z"
+     "iopub.execute_input": "2024-01-24T17:26:10.024360Z",
+     "iopub.status.busy": "2024-01-24T17:26:10.020502Z",
+     "iopub.status.idle": "2024-01-24T17:26:10.321275Z",
+     "shell.execute_reply": "2024-01-24T17:26:10.319871Z",
+     "shell.execute_reply.started": "2024-01-24T17:26:10.024325Z"
     },
     "scrolled": true
    },
@@ -1154,15 +1154,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "b212f5ed-03d6-439f-92ae-f2cbedb18609",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-17T01:42:47.116818Z",
-     "iopub.status.busy": "2024-01-17T01:42:47.116352Z",
-     "iopub.status.idle": "2024-01-17T01:42:47.123427Z",
-     "shell.execute_reply": "2024-01-17T01:42:47.122606Z",
-     "shell.execute_reply.started": "2024-01-17T01:42:47.116778Z"
+     "iopub.execute_input": "2024-01-24T17:26:11.343717Z",
+     "iopub.status.busy": "2024-01-24T17:26:11.343435Z",
+     "iopub.status.idle": "2024-01-24T17:26:11.385195Z",
+     "shell.execute_reply": "2024-01-24T17:26:11.379207Z",
+     "shell.execute_reply.started": "2024-01-24T17:26:11.343691Z"
     }
    },
    "outputs": [],
@@ -1182,15 +1182,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "id": "2f952a7c-3130-49c9-b659-fb941e9e0bfe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-17T01:42:47.125081Z",
-     "iopub.status.busy": "2024-01-17T01:42:47.124864Z",
-     "iopub.status.idle": "2024-01-17T01:42:47.189661Z",
-     "shell.execute_reply": "2024-01-17T01:42:47.188779Z",
-     "shell.execute_reply.started": "2024-01-17T01:42:47.125044Z"
+     "iopub.execute_input": "2024-01-24T17:26:12.529172Z",
+     "iopub.status.busy": "2024-01-24T17:26:12.528709Z",
+     "iopub.status.idle": "2024-01-24T17:26:12.951605Z",
+     "shell.execute_reply": "2024-01-24T17:26:12.915999Z",
+     "shell.execute_reply.started": "2024-01-24T17:26:12.529144Z"
     }
    },
    "outputs": [
@@ -1216,10 +1216,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x166dd1cf0>"
+       "<IPython.lib.display.IFrame at 0x160fc2020>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,15 +1337,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "5ec1352a-f281-4965-b68d-3e86c0269f09",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-17T01:42:48.386279Z",
-     "iopub.status.busy": "2024-01-17T01:42:48.385850Z",
-     "iopub.status.idle": "2024-01-17T01:42:48.393779Z",
-     "shell.execute_reply": "2024-01-17T01:42:48.392847Z",
-     "shell.execute_reply.started": "2024-01-17T01:42:48.386243Z"
+     "iopub.execute_input": "2024-01-24T17:27:02.399419Z",
+     "iopub.status.busy": "2024-01-24T17:27:02.398846Z",
+     "iopub.status.idle": "2024-01-24T17:27:02.528662Z",
+     "shell.execute_reply": "2024-01-24T17:27:02.527016Z",
+     "shell.execute_reply.started": "2024-01-24T17:27:02.399365Z"
     }
    },
    "outputs": [],
